--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,14 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "firebase": "^11.0.1",
+    "i18next": "^23.16.5",
     "jwt-decode": "^4.0.0",
     "mapbox-gl": "^3.7.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-i18next": "^15.1.1",
     "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.28.0",
     "socket.io-client": "^4.8.1",
