--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "socket.io-client": "^4.8.1",
     "supercluster": "^8.0.1",
     "swiper": "^11.1.14",
+    "turf": "^3.0.14",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
