--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "firebase": "^11.0.1",
+    "googletrans": "^1.0.21",
     "i18next": "^23.16.5",
     "jwt-decode": "^4.0.0",
     "mapbox-gl": "^3.7.0",
